--- a/css/main.css
+++ b/css/main.css
@@ -143,3 +143,15 @@ footer {
     margin-top: 30px;
     font-weight: 800;
 }
+/*at media styles go here*/
+/*Organized by size small to large*/
+
+@media screen and (min-width: 470px ) {
+    #profile {        
+        margin: 0;        
+        width: 100%;
+        height: 8em;           
+        display:inline-table;
+        line-height: 1.5em;
+    }
+}
