--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ footer {
 /*at media styles go here*/
 /*Organized by size small to large*/
 
-@media screen and (min-width: 470px ) {
+@media screen and (max-width: 470px ) {
     #profile {        
         margin: 0;        
         width: 100%;
