--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ footer {
     margin-left: 30px;
     margin-top: 75px;
     width: 253px;
-    height: 625px;
+    height: auto;
     padding-top: 20px;
     padding-bottom: 15px;
     line-height: 40px;
@@ -154,4 +154,9 @@ footer {
         display:inline-table;
         line-height: 1.5em;
     }
+}
+@media screen and (max-width: 991px ) {
+    #profile {
+        
+    } 
 }
