--- a/css/main.css
+++ b/css/main.css
@@ -115,8 +115,8 @@ footer {
     color:#FFDCB7;
 }
 #profile {
-    margin-left: 30px;
-    margin-top: 75px;
+    margin-left: 2em;
+    margin-top: 3em;
     width: 253px;
     height: auto;
     padding-top: 20px;
