--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -21,7 +21,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -58,6 +58,12 @@ footer {
     color: #FFDCB7;
     padding-top: 15px;
     padding-left: 28px;
+}
+ul {
+    margin-left: 2em;
+}
+ol {
+    margin-left: 1em;
 }
 /* Class tags */
 .dates {
@@ -147,16 +153,16 @@ footer {
 /*Organized by size small to large*/
 
 @media screen and (max-width: 470px ) {
-    #profile {        
-        margin: 0;        
+    #profile {
+        margin: 0;
         width: 100%;
-        height: 8em;           
+        height: 8em;
         display:inline-table;
         line-height: 1.5em;
     }
 }
 @media screen and (max-width: 991px ) {
     #profile {
-        
-    } 
+
+    }
 }
