--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* This is the IE10 veiw port hack for Surface and Desktop Windows 8 Bug */
+/* This is the IE10 veiw port hack for Surface and Desktop Windows 8 Bug 
 @-ms-viewport {
 	width: device-width;
 }
@@ -30,7 +30,7 @@ time, mark, audio, video {
 @viewport {
 	width: device-width;
 }
-
+*/
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
