--- a/css/main.css
+++ b/css/main.css
@@ -246,18 +246,25 @@ li {
 /*============================
 *   Coming Soon Page
 *=============================*/
+.comingSoon {
+  border: 0.1em solid #3A2510;
+  background-color: #FEF8DC;
+}
 .comingSoon, .comingSoon h1 {
   padding:1em 1em;
   text-align: center;
-  font-size: 3.5em
+  font-size: 1.5em;
   font-weight:700;
+  line-height: normal;
   font-family: sans-serif;
 }
 #tShirt {
   font-size: 1em;
   padding: 0.8em 0.8em;
   margin: 0;
-
+  background-color: #3A2510;
+  color:#F4F4EA ;
+  box-shadow: 0em 0.3em 1em #000;
 }
 
 
@@ -353,6 +360,14 @@ li {
           visibility: hidden;
           width: 5em;
         }
+/*============================
+*   Coming Soon Page
+*=============================*/
+        .comingSoon {
+          padding: 1em 1em 2em 1em;
+          border-bottom: 0.3em solid #3A2510;
+        }
+
 }
 @media screen and (max-width: 519px ){
     @media
